Update: added an update feature

--- a/tracker/templates/tracker/tracker.html
+++ b/tracker/templates/tracker/tracker.html
@@ -1,20 +1,23 @@
-<h2>Balance: £{{ balance|default:"0.00" }}</h2>  <!-- Show balance or default -->
-{% if error %}
-    <p style="color: red;">{{ error }}</p>
-{% endif %}
+<h1><a href={% url 'tracker' %}>Xpense tracker</a></h1>
 
 <form method="POST">
     {% csrf_token %}
-    <input type="text" name="product" placeholder='Product name' required>
-    <input type="number" name="product_count" placeholder='Quantity' required>
-    <input type="number" step="0.01" name="product_cost" placeholder='Cost' required>
-    <button type="submit">Add purchase</button>
+    {{ form.as_p }}
+    <button type="submit">Submit</button>
 </form>
 
---------------------
+<hr>
 <h3>All items</h3>
 
-<table>
+<style>
+    table, th, td {
+  border-collapse: collapse;
+  padding: 10px
+}
+
+</style>
+
+<table class="border-style" border=1 frame=hsides rules=rows>
 <tr>
     <th>Name</th>
     <th>No. of items</th>
@@ -28,9 +31,18 @@
     <td>{{ i.product_count}}</td>
     <td>£{{ i.product_cost }}</td>
     <td>£{{ i.total_cost }}</td>
+    <td><button type='submit'><a href={% url 'update' i.pk %}>Update</a></td>
+    <td><button type='submit'><a href={% url 'delete' i.pk %}>Delete</a></button>
 {% endfor %}
 </table>
 
 <br>
+<hr>
+
+<h2>Balance: £{{ balance |default:"0.00" }}</h2>
+
+{% if error %}
+    <p style="color: red;">{{ error }}</p>
+{% endif %}
 
 <button type='submit'><a href={% url 'add_money' %}>Add money</a></button>
