--- a/tracker/templates/tracker/update.html
+++ b/tracker/templates/tracker/update.html
@@ -1,9 +1,45 @@
-<h1>Update {{ tracker.product }}
+{% extends "tracker/main.html" %}
 
-<form method="POST">
-    {% csrf_token %}
-    <input type="text" name="product" placeholder='Product name' required>
-    <input type="number" name="product_count" placeholder='Quantity' required>
-    <input type="number" step="0.01" name="product_cost" placeholder='Cost' required>
-    <button type="submit">Update purchase</button>
-</form>
+{% block content %}
+
+<div class="container" style="padding:20px">
+
+<style>
+    p {
+        display: flex;
+        flex-flow: row wrap;
+        align-items: center;
+    }
+</style>
+
+<h1><span class="badge text-bg-secondary">Update {{ tracker.product }}</span></h1>
+
+    <form method="POST">
+        {% csrf_token %}
+        <div class="mb-3">
+            <div class="input-group">
+              <span class="input-group-text" id="basic-addon1">Product</span>
+              {{ form.product }}
+            </div>
+        </div>
+          
+        <div class="mb-3">
+            <div class="input-group">
+              <span class="input-group-text" id="basic-addon1">Product count</span>
+              {{ form.product_count }}
+            </div>
+        </div>
+    
+        <div class="mb-3">
+            <div class="input-group">
+              <span class="input-group-text" id="basic-addon1">Product</span>
+              {{ form.product_cost }}
+            </div>
+        </div>
+    
+        <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
+
+{% endblock %}
+
+</div>
