--- a/tracker/templates/tracker/add_money.html
+++ b/tracker/templates/tracker/add_money.html
@@ -1,13 +1,30 @@
-<h3>Current balance: £{{ balance }} </h3>
+{% extends "tracker/main.html" %}
 
-<form method="POST">
+{% block content %}
+
+<div class="container" style="padding-top: 20px">
+
+<form method="POST" class=="row g-3">
     {% csrf_token %}
-    <input type="number" step="0.01" name="amount" required>
-    <button type="submit">Add Money</button>
+
+    <div class="col-auto">
+        <input type="number" step="0.01" name="amount" required class="form-control" id="exampleFormControlInput2" placeholder="Add money">
+    </div>
+
+    <div class="col-auto" style="padding-top:20px">
+        <button type="submit" class="btn btn-primary mb-3">Add Money</button>
+    </div>
+
 </form>
 
 {% if message %}
     <p style="color:green">{{ message }}</p>
 {% endif %}
 
-<button type='submit'><a href={% url 'tracker' %}>Add item</a></button>
+<div class="col-auto">
+<button type='submit' class="btn btn-primary mb-3"><a href={% url 'tracker' %} style="color:white">Add item</a></button>
+</div>
+
+{% endblock %}
+
+</div>
